--- a/pvd_client/package.json
+++ b/pvd_client/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "blockly": "^11.1.1",
     "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18",
